Changed CSS class box_1 to be global since almost every page used it, maybe others classes could be changed too but I didn't look for it, fixed width in login page overflowing and made header stick in the top bar with the sidemenu button when scrolling

--- a/src/app/customers/customers.component.css
+++ b/src/app/customers/customers.component.css
@@ -131,16 +131,6 @@ table {
     background-color: white;
 }
 
-.box_1 {
-    position: relative;
-    top: 6vh;
-    min-height: 100vh;
-    width: 1200px;
-    background-color: white;
-    margin: auto;
-    padding: 40px 0px;
-}
-
 td, th {
     padding: 8px;
     text-align: left;
