--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -39,7 +39,7 @@
 }
 
 .container {
-  width: 100vw;
+  width: 100%;
   height: 95vh;
   display: flex;
   justify-content: center;
