--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -120,16 +120,6 @@ table {
   background-color: white;
 }
 
-.box_one {
-  position: relative;
-  top: 6vh;
-  min-height: 100vh;
-  width: 1200px;
-  background-color: white;
-  margin: auto;
-  padding: 40px 0px;
-}
-
 td, th {
   padding: 8px;
   text-align: left;
